# lightweight-markup-to-pdf

./: .gitignore  LICENSE  LICENSE.txt  README.md  asciidoc_pdf_builder.py  pyproject.toml  requirements.txt  setup.py  setup.sh  tests.py
.github/workflows/: publish.yml  python-publish.yml  tests.yml
lwm2pdf/: __init__.py  clean_html.py  cleanhtml.py  filetypes.py  lwm2pdf.py  main.py  options.py  postprocess_docs.py  process_docs.py  process_options.py  process_pdf.py  processadoc.py  processdocs.py  processmd.py
lwm2pdf/themes/source/: _xrefs.scss
styles/: _xrefs.scss  manuscript.css  manuscript.scss
styles/source/: _toc.scss  _xrefs.scss  manuscript.scss
test-docs/: include.adoc  include_test_example.adoc  manuscript.adoc  memo.md  techbook.adoc
tests/: test_cleans.py  test_lwm2pdf.py  test_options.py  test_process_docs.py  test_process_pdf.py  test_quotes.py
tests/docs/: curly-quoter.adoc  simple_test.adoc
themes/: manuscript.css
themes/source/: techbook.scss
